[gd_scene load_steps=10 format=3 uid="uid://dtpc547sjgma1"]

[ext_resource type="Script" path="res://Data/Player/Player_script.gd" id="1_0a7rp"]
[ext_resource type="PackedScene" uid="uid://fbty7qoypx8w" path="res://Data/Player/Textyres/Player_rig.tscn" id="2_yk537"]
[ext_resource type="Script" path="res://Data/Player/Area_damage.gd" id="3_kngfu"]
[ext_resource type="AudioStream" uid="uid://xvpnyskftn04" path="res://Data/Player/Sound/punch/udar.mp3" id="4_vb15v"]
[ext_resource type="Texture2D" uid="uid://cp3kp6q4k8pbp" path="res://Data/enemy/Boss/Hert.png" id="5_ixb5h"]
[ext_resource type="Script" path="res://Data/Player/Panel_menu.gd" id="6_beol3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i4vvm"]
radius = 9.0
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jepec"]
size = Vector2(30.5, 47)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pkfyl"]
size = Vector2(22, 1)

[node name="Player" type="CharacterBody2D"]
collision_priority = 2.0
script = ExtResource("1_0a7rp")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -24)
shape = SubResource("CapsuleShape2D_i4vvm")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -25)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -30)
zoom = Vector2(1.5, 1.5)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true
drag_bottom_margin = 0.1
editor_draw_drag_margin = true

[node name="FlipDirection" type="Node2D" parent="."]

[node name="PlayerRig" parent="FlipDirection" instance=ExtResource("2_yk537")]

[node name="Area_damage" type="Area2D" parent="FlipDirection"]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_kngfu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipDirection/Area_damage"]
position = Vector2(22.75, -24)
shape = SubResource("RectangleShape2D_jepec")

[node name="Sprite2D" type="Sprite2D" parent="FlipDirection/Area_damage"]
visible = false
modulate = Color(0.196078, 0.196078, 0.196078, 0.180392)
position = Vector2(22.5, -24)
scale = Vector2(1.31818, 46.5)
texture = SubResource("PlaceholderTexture2D_pkfyl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FlipDirection/Area_damage"]
stream = ExtResource("4_vb15v")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]

[node name="inbrecable" type="Timer" parent="."]

[node name="Arm_can" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -102.0
offset_right = 76.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Hert" type="Sprite2D" parent="CanvasLayer/PanelContainer"]
position = Vector2(26, 26)
scale = Vector2(3, 3)
texture = ExtResource("5_ixb5h")

[node name="Hert2" type="Sprite2D" parent="CanvasLayer/PanelContainer"]
position = Vector2(76, 26)
scale = Vector2(3, 3)
texture = ExtResource("5_ixb5h")

[node name="Hert3" type="Sprite2D" parent="CanvasLayer/PanelContainer"]
position = Vector2(126, 26)
scale = Vector2(3, 3)
texture = ExtResource("5_ixb5h")

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(320, 370)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_beol3")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -106.5
offset_right = 139.0
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "back to the menu"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "exiting the game
"

[connection signal="body_entered" from="FlipDirection/Area_damage" to="FlipDirection/Area_damage" method="_on_body_entered"]
[connection signal="body_exited" from="FlipDirection/Area_damage" to="FlipDirection/Area_damage" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="inbrecable" to="." method="_on_inbrecable_timeout"]
[connection signal="timeout" from="Arm_can" to="." method="_on_arm_can_timeout"]
[connection signal="button_down" from="CanvasLayer/Panel/VBoxContainer/Button" to="CanvasLayer/Panel" method="_on_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/VBoxContainer/Button2" to="CanvasLayer/Panel" method="_on_button_2_button_down"]
